SIP2-287 Refactor patron password verification